--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
 4.0 - Media
 ========== */
 .circle {
-  height:345px;
+  height: 345px;
   width: 345px;
   border-radius: 50%;
   display: inline-block;
@@ -64,11 +64,21 @@ body > header {
 
 #bg-intro {
 	background: url("../img/bg-intro.png") 0 0 no-repeat;
+	height: 50rem;
 }
 
 #article {
 	background: url("../img/bg-article.jpg") 0 0 no-repeat;
+	height: 10.5rem;
 }
+
+@media screen and (max-width:480px) {
+	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form {
+		width: 100%;
+	}
+}
+
+
 
 
 
