--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 /* CSS Document */
 
 /*--------------------------------------------------------------
@@ -28,38 +28,162 @@
 --------------------------------------------------------------*/
 
 /* ==========
+1.0 - Typography
+========== */
+ul li a, a {
+	text-decoration: none;
+}
+
+h2, label, footer, p a, nav {
+	font-family: 'Amatic SC', cursive;
+}
+
+p, #about ul li {
+	font-family: 'Josefin Sans', sans-serif;
+}
+
+#bg-intro div p {
+	font-size: 1.75rem;
+	font-weight: 200;
+	line-height: 2.5rem;
+}
+
+#about .col-3-4:first-child {
+	font-weight: 700;
+	font-size: 2rem;
+	line-height: 3rem;
+}
+
+#packages p, #about p a, footer p a, #contact form label,  #contact form p a, #cta p, #about .col-1-3:first-child ul li, #about .col-1-3:first-child p, #about .col-1-3:nth-child(2) p, #about .col-2-3 ul, #about form label {
+	font-size: 1.5rem;
+	line-height: 2.25rem;
+	font-weight: 300;
+}
+
+h2, #article p a {
+	font-size: 3rem;
+}
+
+.fa-facebook-f, .fa-twitter {
+	font-size: 2.5rem;
+}
+
+nav li {
+	font-size: 2rem;
+	font-weight: bold;
+}
+
+nav ul li a:hover, #article p a:hover, footer p a:hover {
+	border-bottom: .15rem solid #f2f2e2;
+}
+
+header .float-none:last-of-type p a:hover {
+	text-decoration: underline;
+}
+
+header .col-3-4 {
+	font-size: 2rem;
+	line-height: 3.5rem;
+	font-weight: 400;
+}
+
+header .col-3-4, #packages p a {
+	text-transform: uppercase;
+}
+
+
+/*----- 1.3 - Buttons -----*/
+#packages p a, #about p a, #contact form p a {
+	padding: .5rem 5rem;
+}
+
+#cta  {
+	padding: 2rem 0;
+	margin-top: 10.5rem;
+}
+
+/*----- 1.4 - Forms -----*/
+#contact form input, #about form input {
+	width: 30rem;
+	height: 2.75rem;
+}
+
+#contact form input, #about form input {
+	border: .15rem solid #6cc4c9;
+}
+
+/*----- 1.5 - Lists -----*/
+#about .col-1-3:first-child ul:first-of-type li:before {
+	content: "-";
+}
+
+#about .col-1-3:first-child ul:first-of-type  {
+	list-style-type: none;
+	padding: 0;
+}
+
+
+/* ==========
 4.0 - Media
 ========== */
 .circle {
   height: 345px;
   width: 345px;
   border-radius: 50%;
-  display: inline-block;
 }
 
 .row:nth-child(2) .col-1-2:first-child .circle:first-child {
-	background: url("../img/package-img-1.jpg") 0 0 no-repeat;
+	background: url("../img/one-day-pk.jpg") 0 0 no-repeat;
 }
 
 .row:nth-child(2) .col-1-2:last-of-type .circle:last-of-type {
-	background: url("../img/package-img-2.jpg") 0 0 no-repeat;
+	background: url("../img/two-day-pk.jpg") 0 0 no-repeat;
 }
 
 .row:nth-child(3) .col-1-2:first-child .circle:first-child {
-	background: url("../img/package-img-3.jpg") 0 0 no-repeat;
+	background: url("../img/three-day-pk.jpg") 0 0 no-repeat;
 }
 
 .row:nth-child(3) .col-1-2:last-of-type .circle:last-of-type {
-	background: url("../img/package-img-4.jpg") 0 0 no-repeat;
+	background: url("../img/four-day-pk.jpg") 0 0 no-repeat;
 }
 
+#map {
+	width: 100%;
+	height: 25rem;
+}
 
 /* ==========
 5.0 - Utility
 ========== */
+.float-left {
+	float: left;
+}
+
+.float-right {
+	float: right;
+}
+
+.float-none {
+	float: none;
+}
+
+nav ul {
+	text-align: right;
+}
+
+#packages .row:first-of-type p, #packages .row:first-of-type h2 {
+	text-align: left;
+}
+
+#about .col-1-3:first-child ul:first-of-type li, header ul li, footer ul li  {
+	list-style: none;
+}
+
 /*----- 5.1 - Background Colors -----*/
 body > header {
 	background: url("../img/bg-header.png") 0 0 no-repeat;
+	height: 50rem;
 }
 
 #bg-intro {
@@ -69,12 +193,235 @@ body > header {
 
 #article {
 	background: url("../img/bg-article.jpg") 0 0 no-repeat;
-	height: 10.5rem;
+	height: 8rem;
+}
+
+nav, #cta {
+	background-color: rgba(0,0,0,0.50)
+}
+
+#cta:hover {
+	background-color: rgba(255,255,255,0.50)
+}
+
+#bg-intro .wrapper , #packages p a, #about p a, footer, #contact form p a  {
+	background-color: #6cc4c9;
+}
+
+#packages p a:hover, #about p a:hover, #contact form p a:hover {
+	background-color: #f2f2e2;
+}
+
+.fab:hover {
+	color: #4d4d4d;
+}
+
+/*----- 5.2 - Text Colors -----*/
+ul li a, header .col-3-4, #bg-intro p, #article p a, #packages p a, #about p a, footer p a, #contact form p a, header .float-none:last-of-type p a {
+	color: #f2f2e2;
+}
+
+h2, #packages p a:hover, #about p a:hover, #contact form label,  #contact form p a:hover, #about form label {
+	color: #6cc4c9;
+}
+
+header .float-none:last-of-type p a:hover, #about .col-3-4, #packages p, #about p, #about li {
+	color: #4d4d4d;
+}
+
+
+/*----- 5.4 - Alignments -----*/
+header p, header .col-1-4:first-child, #about .col-1-3:first-child p, #about .col-1-3:nth-child(2) p  {
+	margin: 0;
+}
+
+#about div.row  {
+	margin-bottom: 10rem;
+}
+
+#about .col-3-4 {
+	width: 100%;
+}
+
+nav ul {
+	padding: 1.25rem 6.5rem 0 0;
+}
+
+#packages .circle, #bg-intro div, #article .col-1-2, #about .col-3-4:first-child, #about form {
+	margin: 0 auto;
+}
+
+header .col-3-4:last-of-type  {
+	margin: 9rem auto;
+}
+
+header div:last-of-type .float-right:last-of-type, header .col-3-4 {
+	margin-top: 10rem;
+}
+
+#packages .row:last-of-type .col-1-2:last-child p {
+	margin-top: 3.1rem;
+}
+
+#packages .row:first-of-type h2 {
+	margin-top: 0;
+}
+
+#packages .row:first-of-type .col-1-2:first-child {
+	padding-right: 5rem;
+}
+
+#packages .row:nth-child(3) h2 {
+	padding: 0 3rem;
+}
+
+#packages .row:nth-child(2) h2 {
+	padding: 0 5rem;
+}
+
+#bg-intro {
+	padding-top: 15rem;
+}
+
+#bg-intro div p {
+	padding: 6rem 5rem;
+}
+
+#contact label:nth-child(3), #contact .col-1-2:first-child label:last-of-type {
+	margin-top: 3rem;
+}
+
+#contact form p {
+	margin-top: 5.5rem;
+}
+
+#about .col-3-4:first-child {
+	padding: 0 5rem 10rem 5rem;
+}
+
+nav li, footer ul li, #about form p  {
+	display: inline-block;
+}
+
+#contact form label, #about form label {
+	display: block;
+}
+
+#article {
+	padding-top: 1.25rem;
+}
+
+h1 {
+	width: 10%;
+	margin-left: 6.5rem;
+}
+
+#packages p, #packages h2, header .col-3-4, #bg-intro div, footer .col-1-3:nth-child(2), #article .col-1-2, #about .col-3-4:first-child, #about form, #cta p {
+	text-align: center;
+}
+ 
+nav li:nth-child(2), nav li:nth-child(3), nav li:last-child {
+	margin-left: 8rem;
+} 
+
+#packages, #about, #contact {
+	margin: 15.5rem auto;
+}
+
+#packages .row:nth-child(2), #packages .row:last-child {
+	margin-top: 15.5rem;
+}
+
+footer ul li, footer .col-1-3:first-child {
+	margin-top: 3rem;
+}
+
+footer ul li:first-child {
+	margin-right: 5rem;
+}
+
+#about form label {
+	margin-right: 14rem;
+}
+
+#about form input {
+	margin-right: 2rem;
 }
 
 @media screen and (max-width:480px) {
-	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form {
+	
+	.wrapper {
+		width: 95%;
+	}
+	/* ==========
+1.0 - Typography
+========== */
+	header .col-3-4, #about .col-3-4 p {
+		font-size: 1.75rem;
+		line-height: 2.75rem;
+	}
+	
+	h2, #packages .col-1-2 h2:first-of-type, #about .col-1-3, #contact form label, #about form label, footer .col-1-3, nav .col-2-3 ul  {
+		text-align: center;
+	}
+	
+	#article p a {
+		font-size: 1.5rem;
+	}
+	
+/*----- 1.3 - Buttons -----*/
+	#cta  {
+	margin-top: -5rem;
+}
+	
+/*----- 1.4 - Forms -----*/
+	#contact form input, #about form input {
+	width: 26rem;
+	height: 2.75rem;
+}
+	
+	
+	/* ==========
+5.0 - Utility
+========== */
+	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form, footer .col-1-3, header nav .col-2-3, header .col-3-4, #bg-intro .wrapper div, #bg-intro .wrapper, #about .col-3-4 p, #contact form .col-1-2 {
 		width: 100%;
+	}
+	
+	header nav ul {
+		display: block;
+	}
+	
+	footer .float-right {
+		float: none;
+	}
+	
+	header nav ul, #article p a, #about .col-3-4:first-child, footer p a, footer .col-1-3:last-child ul, nav .col-2-3 ul li, #packages .row:first-of-type .col-1-2:first-child, #packages .col-1-2 {
+		padding: 0;
+	}
+	
+	#about form label {
+		margin: 0;
+	}
+	
+	nav .col-2-3 ul li {
+		margin-left: 3rem;
+	}
+	
+	#bg-intro .wrapper div p{
+		padding: 8rem .5rem;
+	}
+	
+	#packages p:first-child a, header h1 a img  {
+		margin-left: 6rem;
+	}
+
+	#about .col-3-4:first-child, #about .col-1-3 {
+		margin-bottom: 5rem;
+	}
+	
+	#packages .row section:first-child {
+		margin-bottom: 15rem;
 	}
 }
 
