--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ ul li a, a {
 	text-decoration: none;
 }
 
-h2, label, footer, p a, nav {
+h2, label, footer, p a, nav, #cta p {
 	font-family: 'Amatic SC', cursive;
 }
 
@@ -50,7 +50,6 @@ p, #about ul li {
 
 #about .col-3-4:first-child {
 	font-weight: 700;
-	font-size: 2rem;
 	line-height: 3rem;
 }
 
@@ -60,8 +59,12 @@ p, #about ul li {
 	font-weight: 300;
 }
 
-h2, #article p a {
+h2 {
 	font-size: 3rem;
+}
+
+#article p a, #about .col-3-4:first-child, nav li, header .col-3-4 {
+	font-size: 2rem;
 }
 
 .fa-facebook-f, .fa-twitter {
@@ -69,7 +72,6 @@ h2, #article p a {
 }
 
 nav li {
-	font-size: 2rem;
 	font-weight: bold;
 }
 
@@ -77,12 +79,11 @@ nav ul li a:hover, #article p a:hover, footer p a:hover {
 	border-bottom: .15rem solid #f2f2e2;
 }
 
-header .float-none:last-of-type p a:hover {
+header .float-none:last-of-type p a:hover, #cta p:hover  {
 	text-decoration: underline;
 }
 
 header .col-3-4 {
-	font-size: 2rem;
 	line-height: 3.5rem;
 	font-weight: 400;
 }
@@ -98,14 +99,21 @@ header .col-3-4, #packages p a {
 }
 
 #cta  {
-	padding: 2rem 0;
-	margin-top: 10.5rem;
+	padding: 1.75rem 0;
+	margin-top: 11rem;
 }
 
 /*----- 1.4 - Forms -----*/
+#contact form input {
+	width: 100%;
+}
+
 #contact form input, #about form input {
-	width: 30rem;
-	height: 2.75rem;
+	padding: .75rem;
+}
+
+#about form input {
+	width: 50%;
 }
 
 #contact form input, #about form input {
@@ -126,12 +134,6 @@ header .col-3-4, #packages p a {
 /* ==========
 4.0 - Media
 ========== */
-.circle {
-  height: 345px;
-  width: 345px;
-  border-radius: 50%;
-}
-
 .row:nth-child(2) .col-1-2:first-child .circle:first-child {
 	background: url("../img/one-day-pk.jpg") 0 0 no-repeat;
 }
@@ -156,6 +158,12 @@ header .col-3-4, #packages p a {
 /* ==========
 5.0 - Utility
 ========== */
+.circle {
+  height: 345px;
+  width: 345px;
+  border-radius: 50%;
+}
+
 .float-left {
 	float: left;
 }
@@ -188,7 +196,7 @@ body > header {
 
 #bg-intro {
 	background: url("../img/bg-intro.png") 0 0 no-repeat;
-	height: 50rem;
+	height: 40rem;
 }
 
 #article {
@@ -212,12 +220,8 @@ nav, #cta {
 	background-color: #f2f2e2;
 }
 
-.fab:hover {
-	color: #4d4d4d;
-}
-
 /*----- 5.2 - Text Colors -----*/
-ul li a, header .col-3-4, #bg-intro p, #article p a, #packages p a, #about p a, footer p a, #contact form p a, header .float-none:last-of-type p a {
+ul li a, header .col-3-4, #bg-intro p, #article p a, #packages p a, #about p a, footer p a, #contact form p a, header .float-none:last-of-type p a, #cta p {
 	color: #f2f2e2;
 }
 
@@ -225,13 +229,13 @@ h2, #packages p a:hover, #about p a:hover, #contact form label,  #contact form p
 	color: #6cc4c9;
 }
 
-header .float-none:last-of-type p a:hover, #about .col-3-4, #packages p, #about p, #about li {
+header .float-none:last-of-type p a:hover, #about .col-3-4, #packages p, #about p, #about li, #cta p:hover, .fab:hover  {
 	color: #4d4d4d;
 }
 
 
 /*----- 5.4 - Alignments -----*/
-header p, header .col-1-4:first-child, #about .col-1-3:first-child p, #about .col-1-3:nth-child(2) p  {
+header p, header .col-1-4:first-child, #about .col-1-3:first-child p, #about .col-1-3:nth-child(2) p, #about .col-1-3:first-child ul:first-of-type, footer ul  {
 	margin: 0;
 }
 
@@ -259,6 +263,10 @@ header div:last-of-type .float-right:last-of-type, header .col-3-4 {
 	margin-top: 10rem;
 }
 
+#article p {
+	margin-top: 1.75rem;
+}
+
 #packages .row:last-of-type .col-1-2:last-child p {
 	margin-top: 3.1rem;
 }
@@ -280,7 +288,7 @@ header div:last-of-type .float-right:last-of-type, header .col-3-4 {
 }
 
 #bg-intro {
-	padding-top: 15rem;
+	padding-top: 9rem;
 }
 
 #bg-intro div p {
@@ -307,7 +315,7 @@ nav li, footer ul li, #about form p  {
 	display: block;
 }
 
-#article {
+#article, footer {
 	padding-top: 1.25rem;
 }
 
@@ -325,11 +333,11 @@ nav li:nth-child(2), nav li:nth-child(3), nav li:last-child {
 } 
 
 #packages, #about, #contact {
-	margin: 15.5rem auto;
+	margin: 10rem auto;
 }
 
 #packages .row:nth-child(2), #packages .row:last-child {
-	margin-top: 15.5rem;
+	margin-top: 10rem;
 }
 
 footer ul li, footer .col-1-3:first-child {
@@ -371,20 +379,21 @@ footer ul li:first-child {
 	
 /*----- 1.3 - Buttons -----*/
 	#cta  {
-	margin-top: -5rem;
+	margin-top: 5.5rem;
+	padding: 3rem 0;
+}
+	
+	#packages p a, #about p a, #contact form p a {
+	padding: .5rem 9.9rem;
 }
 	
 /*----- 1.4 - Forms -----*/
-	#contact form input, #about form input {
-	width: 26rem;
-	height: 2.75rem;
-}
-	
+
 	
 	/* ==========
 5.0 - Utility
 ========== */
-	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form, footer .col-1-3, header nav .col-2-3, header .col-3-4, #bg-intro .wrapper div, #bg-intro .wrapper, #about .col-3-4 p, #contact form .col-1-2 {
+	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form, footer .col-1-3, header nav .col-2-3, header .col-3-4, #bg-intro .wrapper div, #bg-intro .wrapper, #about .col-3-4 p, #contact form .col-1-2, #about .col-1-4, #about .col-3-4 input {
 		width: 100%;
 	}
 	
@@ -396,24 +405,28 @@ footer ul li:first-child {
 		float: none;
 	}
 	
-	header nav ul, #article p a, #about .col-3-4:first-child, footer p a, footer .col-1-3:last-child ul, nav .col-2-3 ul li, #packages .row:first-of-type .col-1-2:first-child, #packages .col-1-2 {
+	header nav ul, #article p a, #about .col-3-4:first-child, footer p a, footer .col-1-3:last-child ul, nav .col-2-3 ul li, #packages .row:first-of-type .col-1-2:first-child, #packages .col-1-2, footer .col-1-3, #contact .col-1-2 {
 		padding: 0;
 	}
 	
-	#about form label {
+	#about form label, #packages p:first-child a, #about ul, footer p {
 		margin: 0;
 	}
 	
-	nav .col-2-3 ul li {
-		margin-left: 3rem;
+	#contact .col-1-2 {
+		padding: 0;
+	}
+	
+	nav .col-2-3 ul li:nth-child(2), nav .col-2-3 ul li:nth-child(3), 	nav .col-2-3 ul li:last-child {
+		margin-left: 2.5rem;
 	}
 	
 	#bg-intro .wrapper div p{
 		padding: 8rem .5rem;
 	}
 	
-	#packages p:first-child a, header h1 a img  {
-		margin-left: 6rem;
+	header h1 a img  {
+		margin-left: 4.5rem;
 	}
 
 	#about .col-3-4:first-child, #about .col-1-3 {
@@ -421,8 +434,38 @@ footer ul li:first-child {
 	}
 	
 	#packages .row section:first-child {
-		margin-bottom: 15rem;
+		margin-bottom: 2rem;
 	}
+	
+	#packages .row:nth-child(3) .col-1-2:last-child, #packages .row:nth-child(2) .col-1-2:last-child {
+		margin-top: 9rem;
+	}
+	
+	header .col-3-4:last-of-type  {
+		margin: 3rem auto;
+	}
+	
+	#bg-intro {
+	padding-top: .5rem;
+}
+	
+	#packages .row:nth-child(2) h2 {
+	padding: 0 4rem;
+}
+	#article {
+		height: 10.5rem;
+	}
+	
+	#map {
+		height: 13rem;
+	}
+	
+	/*----- 5.1 - Background Colors -----*/
+#bg-intro {
+	background: url("../img/bg-intro.png") 0 0 no-repeat;
+	height: 33rem;
+}
+	
 }
 
 
