--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ header .col-3-4, #packages p a {
 
 /*----- 1.3 - Buttons -----*/
 #packages p a, #about p a, #contact form p a {
-	padding: .5rem 5rem;
+	padding: .75rem 5rem;
 }
 
 #cta  {
@@ -167,9 +167,14 @@ nav ul li a:hover, #article p a:hover, footer p a:hover {
 5.0 - Utility
 ========== */
 .circle {
-  height: 345px;
-  width: 345px;
-  border-radius: 50%;
+	height: 345px;
+	width: 345px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
+	-ms-border-radius: 50%;
+	border-radius: 50%;
+	
 }
 
 .float-left {
@@ -419,7 +424,7 @@ footer ul li:first-child {
 	}
 	
 	#packages p, #about .col-1-3:first-child ul li, #about .col-1-3:first-child p, #about .col-1-3:nth-child(2) p, #about .col-2-3 ul, #about form label {
-	font-size: 1rem;
+	font-size: 1.25rem;
 	}
 	
 	h2, #packages .col-1-2 h2:first-of-type, #about .col-1-3, #contact form label, #about form label, footer .col-1-3, nav .col-2-3 ul  {
@@ -430,7 +435,7 @@ footer ul li:first-child {
 		font-size: 1.5rem;
 	}
 	
-	#cta p, #packages p a, #contact form label {
+	#cta p, #packages p a, #contact form label, #about form p a {
 		font-size: 2rem;
 	}
 	
@@ -440,23 +445,30 @@ footer ul li:first-child {
 	padding: 3rem 0;
 }
 	
-	#packages p a, #contact form p a {
+	#packages p a, #contact form p a, #about .col-3-4 p a, #contact form p a {
 	padding: 1.5rem 5rem;
 }
 
 	
 /*----- 1.4 - Forms -----*/
 
+	#contact form input, #about form input {
+	padding: 1.75rem;
+}
 	
 	/* ==========
 5.0 - Utility
 ========== */
-	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form, footer .col-1-3, header nav .col-2-3, header .col-3-4, #bg-intro .wrapper div, #bg-intro .wrapper, #about .col-3-4 p, #contact form .col-1-2, #about .col-1-4, #packages .row:first-child img, #about img, .full-width  {
+	header .col-1-4:first-of-type, #packages .row .col-1-2, #about .col-1-2, #about .col-1-3, #about .col-2-3, #about .col-3-4, #contact form, footer .col-1-3, header nav .col-2-3, header .col-3-4, #bg-intro .wrapper div, #bg-intro .wrapper, #about .col-3-4 p, #about .col-1-4, #packages .row:first-child img, #about img, .full-width, #contact form .col-1-2  {
 		width: 100%;
 	}
 	
-	#about .col-3-4 input, #about .col-3-4 p {
+	#about .col-3-4 input, #about .col-3-4 p, #contact .col-1-2 input {
 		width: 90%;
+	}
+	
+	#about .col-3-4 p {
+		margin: 2rem;
 	}
 	
 	header nav ul {
@@ -468,16 +480,17 @@ footer ul li:first-child {
 	}
 	
 	#packages .row:first-of-type .col-1-2:first-child p:nth-child(3), #packages .row:nth-child(2) p:nth-child(3), #packages .row:last-of-type p:nth-child(3) {
-		margin-bottom: 3rem;
+		margin: 0 1rem 3rem 1rem;
 	}
 	
 	header nav ul, #article p a, #about .col-3-4:first-child, footer p a, footer .col-1-3:last-child ul, nav .col-2-3 ul li, #packages .row:first-of-type .col-1-2:first-child, #packages .col-1-2, footer .col-1-3, #contact .col-1-2, #about .col-1-3, #packages .row:nth-child(2), #packages .row:last-child {
 		padding: 0;
 	}
 	
-	#about form label, #packages p:first-child a, #about ul, footer p, #about .col-3-4 p, #about form input, #about .col-3-4, #packages .row:nth-child(2) p, #packages .row:nth-child(3) p  {
+	#about form label, #packages p:first-child a, #about ul, footer p, #about form input, #about .col-3-4, #packages .row:nth-child(2) p, #packages .row:nth-child(3) p, #contact .col-1-2 input  {
 		margin: 0;
 	}
+
 	
 	.full-width {
 		display: block;
@@ -511,7 +524,7 @@ footer ul li:first-child {
 		margin-left: 7.5rem;
 	}
 	
-	#packages .row:first-child p:first-of-type, #packages .row:first-child p:nth-child(3), #about .col-1-3 p:last-of-type {
+	#packages .row:first-child p:first-of-type, #packages .row:first-child p:nth-child(3) {
 		margin: 0 1rem;
 	}
 
@@ -559,7 +572,7 @@ footer ul li:first-child {
 	/*----- 5.1 - Background Colors -----*/
 #bg-intro {
 	background: url("../img/bg-intro.png") 0 0 no-repeat;
-	height: 33rem;
+	height: 30rem;
 }
 	
 }
