--- a/css/main.css
+++ b/css/main.css
@@ -463,7 +463,7 @@ footer ul li:first-child {
 		width: 100%;
 	}
 	
-	#about .col-3-4 input, #about .col-3-4 p, #contact .col-1-2 input {
+	#about .col-3-4 input, #about .col-3-4 p, #contact form .col-1-2  {
 		width: 90%;
 	}
 	
@@ -490,6 +490,15 @@ footer ul li:first-child {
 	#about form label, #packages p:first-child a, #about ul, footer p, #about form input, #about .col-3-4, #packages .row:nth-child(2) p, #packages .row:nth-child(3) p, #contact .col-1-2 input  {
 		margin: 0;
 	}
+	
+	#contact form .col-1-2 {
+		margin: 0 auto;
+		float: none;
+	}
+	
+	#contact form .col-1-2:last-child {
+		padding-top: 3rem;
+	}
 
 	
 	.full-width {
@@ -499,6 +508,10 @@ footer ul li:first-child {
 	
 	.full-width {
 		padding: 1rem 0;
+	}
+	
+	#contact form .col-1-2 {
+		text-align: center;
 	}
 	
 	#packages .row p, #about p, #contact p, .full-width {
